fix: Improve handling of empty string fields (e.g. comments)

--- a/protocols/histology/Deparaffinization.ipynb
+++ b/protocols/histology/Deparaffinization.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +54,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/coder/work/protocol-timer\n"
+     ]
+    }
+   ],
    "source": [
-    "parser = ConfigParser()\n",
+    "# Set the working directory based on local or github\n",
+    "def get_git_root():\n",
+    "    import subprocess\n",
+    "    try:\n",
+    "        git_root = subprocess.check_output(['git', 'rev-parse', '--show-toplevel'], stderr=subprocess.STDOUT)\n",
+    "        return git_root.strip().decode('utf-8')\n",
+    "    except subprocess.CalledProcessError:\n",
+    "        return None\n",
+    "    \n",
+    "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
+    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
+    "\tos.chdir(workspace_dir)\n",
+    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
     "\n",
-    "_ = parser.read('../token.secrets')\n",
-    "\n",
-    "channel_id = parser.get('discord', 'channel_id')\n",
-    "\n",
-    "webhook_url = parser.get('discord', 'webhook')\n",
-    "\n",
-    "matrix_webhook_url = parser.get('matrix', 'webhook')"
+    "else:\n",
+    "\troot_dir = get_git_root()\n",
+    "\tprint(root_dir)\n",
+    "\tos.chdir(root_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading from token.secrets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the webhooks from a secrets file or from environment variables\n",
+    "if os.getenv(\"TEST_WEBHOOK\"):\n",
+    "\tprint(\"Using the test webhook\")\n",
+    "\tmatrix_webhook_url = os.getenv(\"TEST_WEBHOOK\")\n",
+    "\n",
+    "elif os.path.exists(f\"{root_dir}/protocols/token.secrets\"):\n",
+    "\tprint('Reading from token.secrets')\n",
+    "\tparser = ConfigParser()\n",
+    "\t_ = parser.read(f'{root_dir}/protocols/token.secrets')\n",
+    "\tchannel_id = parser.get('discord', 'channel_id')\n",
+    "\twebhook_url = parser.get('discord', 'webhook')\n",
+    "\tmatrix_webhook_url = parser.get('matrix', 'webhook')\n",
+    "\n",
+    "elif os.getenv(\"MATRIX_WEBHOOK\"):\n",
+    "\tmatrix_webhook_url = os.getenv(\"MATRIX_WEBHOOK\")\n",
+    "\n",
+    "elif os.getenv(\"DISCORD_WEBHOOK\"):\n",
+    "\tchannel_id = os.getenv(\"CHANNEL_ID\")\n",
+    "\twebhook_url = os.getenv(\"DISCORD_WEBHOOK\")\n",
+    "\n",
+    "else:\n",
+    "\tprint(\"Error, no webhooks set\")\n",
+    "\timport sys\n",
+    "\tsys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -319,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +388,7 @@
     }
    ],
    "source": [
-    "protocol_csv_path = './Deparaffinization.csv' #'./histology/FFPE.csv' \n",
+    "protocol_csv_path = './protocols/histology/Deparaffinization.csv'\n",
     "\n",
     "\n",
     "# Show the HTML Description file loaded\n",
@@ -341,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +437,7 @@
        "      <td>ddH2O</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 10: ddH2O (0:05:00) &lt;br&gt;Description: Room...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -389,7 +446,7 @@
        "      <td>50% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 9: 50% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -398,7 +455,7 @@
        "      <td>75% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 8: 75% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -407,7 +464,7 @@
        "      <td>95% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 7: 95% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -416,7 +473,7 @@
        "      <td>100% Ethanol - 2</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 6: 100% Ethanol - 2 (0:05:00) &lt;br&gt;Descrip...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -425,7 +482,7 @@
        "      <td>100% Ethanol - 1</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 5: 100% Ethanol - 1 (0:05:00) &lt;br&gt;Descrip...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -434,7 +491,7 @@
        "      <td>50% Xylene / 50% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 4: 50% Xylene / 50% Ethanol (0:05:00) &lt;br...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -443,7 +500,7 @@
        "      <td>Xylene - 2</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 3: Xylene - 2 (0:05:00) &lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -452,7 +509,7 @@
        "      <td>Xylene - 1</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 2: Xylene - 1 (0:05:00) &lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -461,7 +518,7 @@
        "      <td>Melt paraffin in oven</td>\n",
        "      <td>1:00:00</td>\n",
        "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
+       "      <td></td>\n",
        "      <td>Step 1: Melt paraffin in oven (1:00:00) &lt;br&gt;De...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -470,16 +527,16 @@
       ],
       "text/plain": [
        "   Step Number                 Step Text Duration       Description Comment  \\\n",
-       "0           10                     ddH2O  0:05:00  Room Temperature    <NA>   \n",
-       "1            9               50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "2            8               75% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "3            7               95% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "4            6          100% Ethanol - 2  0:05:00  Room Temperature    <NA>   \n",
-       "5            5          100% Ethanol - 1  0:05:00  Room Temperature    <NA>   \n",
-       "6            4  50% Xylene / 50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "7            3                Xylene - 2  0:05:00  Room Temperature    <NA>   \n",
-       "8            2                Xylene - 1  0:05:00  Room Temperature    <NA>   \n",
-       "9            1     Melt paraffin in oven  1:00:00               60C    <NA>   \n",
+       "0           10                     ddH2O  0:05:00  Room Temperature           \n",
+       "1            9               50% Ethanol  0:05:00  Room Temperature           \n",
+       "2            8               75% Ethanol  0:05:00  Room Temperature           \n",
+       "3            7               95% Ethanol  0:05:00  Room Temperature           \n",
+       "4            6          100% Ethanol - 2  0:05:00  Room Temperature           \n",
+       "5            5          100% Ethanol - 1  0:05:00  Room Temperature           \n",
+       "6            4  50% Xylene / 50% Ethanol  0:05:00  Room Temperature           \n",
+       "7            3                Xylene - 2  0:05:00  Room Temperature           \n",
+       "8            2                Xylene - 1  0:05:00  Room Temperature           \n",
+       "9            1     Melt paraffin in oven  1:00:00               60C           \n",
        "\n",
        "                                            Combined  \n",
        "0  Step 10: ddH2O (0:05:00) <br>Description: Room...  \n",
@@ -505,8 +562,13 @@
     "df = df.iloc[::-1].reset_index()\n",
     "df.drop(columns='index', inplace=True)\n",
     "\n",
+    "# If the text columns are empty, fill them with a blank string\n",
+    "df[['Description', 'Comment']] = df[['Description', 'Comment']].fillna(\"\")\n",
+    "\n",
+    "# Combine the columns to form a single string which will be messaged\n",
     "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'].astype(str) + \" <br>Comment: \" + df['Comment'].astype(str)\n",
     "\n",
+    "# Set dtypes\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
     "display(df)"
@@ -514,13 +576,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Total time to complete the protocol: 1h:45m:0s.<br>Expected time of completion: Sunday at 06:38 PM"
+       "Total time to complete the protocol: 1h:45m:0s.<br>Expected time of completion: Monday at 09:03 PM"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -565,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -614,27 +676,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(clear_chat_page)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(f\"{html_description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    }
+   ],
    "source": [
     "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
    ]
@@ -645,18 +731,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 1: Melt paraffin in oven (1:00:00) <br>Description: 60C <br>Comment: nan**') \n",
+    "print('**Step 1: Melt paraffin in oven (1:00:00) <br>Description: 60C <br>Comment: **') \n",
     "print('Duration is 60.0 minutes') \n",
     "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: **\n",
+      "Duration is 5.0 minutes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Starting Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix notification successful\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f5dcb9e162504bd5b809b8105ac0487f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "     0% [Elapsed: 00:00 -- Remaining: ?]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m**Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: **\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDuration is 5.0 minutes\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[0;32m----> 3\u001b[0m \u001b[43mcountdown\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDuration\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCombined\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDuration\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 84\u001b[0m, in \u001b[0;36mcountdown\u001b[0;34m(timestring, step_text, duration)\u001b[0m\n\u001b[1;32m     77\u001b[0m timer \u001b[38;5;241m=\u001b[39m date\u001b[38;5;241m.\u001b[39mtimedelta(seconds\u001b[38;5;241m=\u001b[39mtotal_seconds)\n\u001b[1;32m     79\u001b[0m \u001b[38;5;66;03m# print(timer, sep='\\r')\u001b[39;00m\n\u001b[1;32m     80\u001b[0m \n\u001b[1;32m     81\u001b[0m \u001b[38;5;66;03m# Update the tqdm progress bar\u001b[39;00m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;66;03m# pbar.update(100 / total_seconds_original)\u001b[39;00m\n\u001b[0;32m---> 84\u001b[0m \u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     86\u001b[0m total_seconds \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     87\u001b[0m pbar\u001b[38;5;241m.\u001b[39mupdate(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "print('**Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
    ]
@@ -667,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 3: Xylene - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 3: Xylene - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
    ]
@@ -678,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
    ]
@@ -689,7 +826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 5: 100% Ethanol - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
    ]
@@ -700,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 6: 100% Ethanol - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
    ]
@@ -711,7 +848,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 7: 95% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 7: 95% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
    ]
@@ -722,7 +859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 8: 75% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 8: 75% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
    ]
@@ -733,7 +870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 9: 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 9: 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
    ]
@@ -744,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 10: ddH2O (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('**Step 10: ddH2O (0:05:00) <br>Description: Room Temperature <br>Comment: **') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
    ]
